plugins {
    id 'org.springframework.boot' version '3.3.8'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

group = 'telegram'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    implementation 'org.telegram:telegrambots-springboot-longpolling-starter:9.3.0'
    implementation 'org.telegram:telegrambots-client:9.3.0'

    implementation 'org.liquibase:liquibase-core'

    implementation 'org.json:json:20240303'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
    implementation 'com.fasterxml.jackson.module:jackson-module-jakarta-xmlbind-annotations'

    implementation 'jakarta.xml.soap:jakarta.xml.soap-api'
    implementation 'com.sun.xml.messaging.saaj:saaj-impl'

    implementation 'com.rometools:rome:1.15.0'
    implementation 'org.apache.commons:commons-lang3'
    implementation 'org.apache.httpcomponents.client5:httpclient5'
    implementation 'org.apache.commons:commons-text:1.10.0'
    implementation 'commons-codec:commons-codec'
    implementation 'com.google.zxing:core:3.5.3'
    implementation 'com.google.zxing:javase:3.5.3'
    implementation 'org.jfree:jfreechart:1.5.4'
    implementation 'com.drewnoakes:metadata-extractor:2.18.0'
    implementation 'com.knuddels:jtokkit:1.1.0'
    implementation 'commons-net:commons-net:3.12.0'
    implementation 'org.apache.tika:tika-core:3.2.3'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    runtimeOnly 'com.h2database:h2:1.4.200'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}

bootJar {
    archiveFileName = 'Bot.jar'
}
